--- a/.github/workflows/docs-prose-bot.yml
+++ b/.github/workflows/docs-prose-bot.yml
@@ -34,21 +34,17 @@ jobs:
         run: npm i -g cspell@latest
 
       - name: Install Vale
-        run: |
-          curl -fsSL https://github.com/errata-ai/vale/releases/latest/download/vale_3.7.1_Linux_64-bit.tar.gz -o vale.tar.gz
-          tar -xzf vale.tar.gz vale
-          sudo mv vale /usr/local/bin/vale
-          vale --version
+        uses: errata-ai/vale-action@v2.1.1
+        with:
+          files: "."
+          reporter: github-check
+          filter_mode: nofilter
 
       - name: Run CSpell (autofix)
         # CSpell can auto-fix some simple typos depending on dictionaries.
         run: |
           cspell --config .cspell.json "**/*.md" --no-progress --show-context --show-suggestions --fail-fast false || true
           cspell --config .cspell.json "**/*.md" --no-progress --fix || true
-
-      - name: Run Vale (report-only)
-        run: |
-          vale --output=line .
 
       - name: Create PR if changes
         uses: peter-evans/create-pull-request@v6
