--- a/.github/workflows/docs-prose-bot.yml
+++ b/.github/workflows/docs-prose-bot.yml
@@ -18,6 +18,8 @@ permissions:
 jobs:
   prose:
     runs-on: ubuntu-latest
+    env:
+      DOCS_GLOB: "**/*.md"
 
     steps:
       - name: Checkout
@@ -36,7 +38,7 @@ jobs:
       - name: Install Vale
         uses: errata-ai/vale-action@v2.1.1
         with:
-          files: "."
+          files: ${{ env.DOCS_GLOB }}
           reporter: github-check
           filter_mode: nofilter
           fail_on_error: false
@@ -44,8 +46,8 @@ jobs:
       - name: Run CSpell (autofix)
         # CSpell can auto-fix some simple typos depending on dictionaries.
         run: |
-          cspell --config .cspell.json "**/*.md" --no-progress --show-context --show-suggestions --fail-fast false || true
-          cspell --config .cspell.json "**/*.md" --no-progress --fix || true
+          cspell --config .cspell.json "${{ env.DOCS_GLOB }}" --no-progress --show-context --show-suggestions --fail-fast false || true
+          cspell --config .cspell.json "${{ env.DOCS_GLOB }}" --no-progress --fix || true
 
       - name: Create PR if changes
         uses: peter-evans/create-pull-request@v6
